{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 12,
  "lineage": "26771a64-8aac-1059-9276-91cc7e43dc1a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b898040803850657",
            "arn": "arn:aws:ec2:us-east-1:287484954362:instance/i-057fbe2b711508207",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-057fbe2b711508207",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kevin-keypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-01f3c4b080791c2f1",
            "private_dns": "ip-10-0-2-191.ec2.internal",
            "private_ip": "10.0.2.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0f834d80407e4cf39",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0de49e02d90df3c45",
            "tags": {
              "Name": "kevin-database"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e19e4bc773c72815"
            ]
          },
          "depends_on": [
            "aws_key_pair.default",
            "aws_security_group.sg-db",
            "aws_subnet.private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b898040803850657",
            "arn": "arn:aws:ec2:us-east-1:287484954362:instance/i-006d8d7688b297866",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-006d8d7688b297866",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kevin-keypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-01ad6c64e6f299296",
            "private_dns": "ip-10-0-1-7.ec2.internal",
            "private_ip": "10.0.1.7",
            "public_dns": "ec2-3-88-4-64.compute-1.amazonaws.com",
            "public_ip": "3.88.4.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0ae916c999fe23f8a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-003032ec3e918ebf0",
            "tags": {
              "Name": "kevin-webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01c7392f311fc0b48"
            ]
          },
          "depends_on": [
            "aws_key_pair.default",
            "aws_security_group.sg-web",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-07d1d92264942845e",
            "owner_id": "287484954362",
            "tags": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0ae8dd7f083bf3508"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ba6e8b8112fd3c65",
            "owner_id": "287484954362",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d1d92264942845e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet RT"
            },
            "vpc_id": "vpc-0ae8dd7f083bf3508"
          },
          "depends_on": [
            "aws_internet_gateway.main-igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9fb0509e416b4aa",
            "route_table_id": "rtb-0ba6e8b8112fd3c65",
            "subnet_id": "subnet-003032ec3e918ebf0"
          },
          "depends_on": [
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287484954362:security-group/sg-0e19e4bc773c72815",
            "description": "Allow traffic from public subnet",
            "egress": [],
            "id": "sg-0e19e4bc773c72815",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DB-SG",
            "name_prefix": null,
            "owner_id": "287484954362",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae8dd7f083bf3508"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287484954362:security-group/sg-01c7392f311fc0b48",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [],
            "id": "sg-01c7392f311fc0b48",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web-SG",
            "name_prefix": null,
            "owner_id": "287484954362",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae8dd7f083bf3508"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287484954362:subnet/subnet-0de49e02d90df3c45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0de49e02d90df3c45",
            "map_public_ip_on_launch": false,
            "owner_id": "287484954362",
            "tags": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-0ae8dd7f083bf3508"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287484954362:subnet/subnet-003032ec3e918ebf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-003032ec3e918ebf0",
            "map_public_ip_on_launch": false,
            "owner_id": "287484954362",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0ae8dd7f083bf3508"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287484954362:vpc/vpc-0ae8dd7f083bf3508",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e55418795e3be6a1",
            "default_route_table_id": "rtb-0198f151a88678b8b",
            "default_security_group_id": "sg-012415da5c30babb2",
            "dhcp_options_id": "dopt-dd471ca4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ae8dd7f083bf3508",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0198f151a88678b8b",
            "owner_id": "287484954362",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}